Add new app icons and update manifest names
Added multiple icon sizes to the icons directory and updated the app name and short_name in manifest.json to 'UMT Facility Feedback' and 'UMTFeedback'. This improves app branding and ensures proper icon display across devices.

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "UMT Facility Reporter",
-  "short_name": "UMTReporter",
+  "name": "UMT Facility Feedback",
+  "short_name": "UMTFeedback",
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#2c3e50",
