Update app name to 'UMT Facility Feedback Reporter'
Renamed the app throughout the UI, manifest, and service worker from 'UMT Facility Reporter' to 'UMT Facility Feedback Reporter' for consistency and clarity. Updated manifest description for improved context. Incremented service worker cache version to v12.

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "UMT Facility Feedback",
+  "name": "UMT Facility Feedback Reporter",
   "short_name": "UMTFeedback",
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#2c3e50",
   "theme_color": "#3498db",
-  "description": "Report campus facility issues with location and photos",
+  "description": "A student-driven platform to report dissatisfaction with campus facilities—pin issues, attach photos, and track follow-ups.",
   "orientation": "portrait",
   "icons": [
     {
